[gd_scene load_steps=74 format=2]

[ext_resource path="res://Character/Enemy/Run.png" type="Texture" id=1]
[ext_resource path="res://Character/Enemy/Jump.png" type="Texture" id=2]
[ext_resource path="res://Character/Enemy/Attack3.png" type="Texture" id=3]
[ext_resource path="res://Character/Enemy/Attack1.png" type="Texture" id=4]
[ext_resource path="res://Character/Enemy/Attack4.png" type="Texture" id=5]
[ext_resource path="res://Character/Enemy/Attack2.png" type="Texture" id=6]
[ext_resource path="res://Character/Enemy/Idle.png" type="Texture" id=7]
[ext_resource path="res://Character/Enemy/Take Hit - white silhouette.png" type="Texture" id=8]
[ext_resource path="res://Character/Enemy/Fall.png" type="Texture" id=9]
[ext_resource path="res://Character/Enemy/Death.png" type="Texture" id=10]
[ext_resource path="res://Character/Enemy/Take Hit.png" type="Texture" id=11]
[ext_resource path="res://Character/Enemy/Enemy.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 750, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 750, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 900, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1050, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 128 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "Atack1",
"speed": 4.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Atack2",
"speed": 4.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Atack3",
"speed": 4.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": false,
"name": "Atack4",
"speed": 4.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "Fall",
"speed": 4.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Jump",
"speed": 2.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "TakeHit",
"speed": 4.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": false,
"name": "TakeHit2",
"speed": 4.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "init",
"speed": 4.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.251923, 0.505882, 0.823077, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.339502, 0.19, 1, 0.969238, 0.611948, 0.0613851, 1, 1, 0.944603, 0.153333, 1, 0.984896, 1, 0.466667, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=2]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0.00925927, 400 ), 0.0, 0.0, 0, 0, Vector2( 0.175926, 400 ), 0.0, 0.0, 0, 0, Vector2( 0.407407, 0.454559 ), -368.182, -368.182, 0, 0, Vector2( 0.990741, 11.3636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Curve" id=6]
max_value = 2.5
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 2.2
flag_disable_z = true
spread = 10.91
gravity = Vector3( -20, 2000, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.27
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 3 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="CapsuleShape2D" id=67]
radius = 13.0
height = 14.0

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 16, 12 )

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 15, 3 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 42 )
animation = "Atack1"
playing = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.2
one_shot = true
explosiveness = 0.5
visibility_rect = Rect2( 0, 0, 0, 0 )
process_material = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 14 )
shape = SubResource( 67 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 34, -7 )
enabled = true
cast_to = Vector2( 0, 48 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 25, 16 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 48 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 44, 16 )
shape = SubResource( 68 )

[node name="PlayerDetector2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector2"]
position = Vector2( -31, 17 )
shape = SubResource( 68 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 44, 18 )
shape = SubResource( 69 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="PlayerDetector2" to="." method="_on_PlayerDetector2_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
